# eudi-web-wallet-mock

./: .gitignore  README.md  install.sh  pyproject.toml  resolve-ip.sh  test-grnet-issuer.sh  test-local-grnet-issuer.sh  test-local-ri-issuer.sh  wallet-issuer.py  wallet_config.json  wallet_issuer.py  wallet_issuer_config.json  wallet_verifier.py  wallet_verifier_config.json
data/: auth_request.json  auth_request_mdoc_mdl.json  credential_data_mdl.json  credential_data_mdl_image.json  credential_data_pid.json  credential_offer.json  credential_offer_mdl_mdoc.json  credential_offer_pid_mdoc.json  ec_private_key.pem  mdoc_kotlin_status_list_revoked.cbor  mdoc_kotlin_status_list_valid.cbor
