[tool.poetry]
name = "eudi-web-wallet-mock"
version = "0.1.0"
description = ""
authors = ["GRNET SA"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
cryptography = "^43.0.3"
pyjwt = "^2.9.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
